# snxseedcon

./: README.md  config.py  firstiteration.md  idea.md  main.py  phase2_config.py  pyproject.toml  run_phase2.py  test_33b_experiments.py  test_creative_writing.py  test_diversity_check.py  test_full_comparison.py  test_inspect_outputs.py  test_minimal.py  test_problem_generation.py  test_sigma_sweep.py
Test1/: test_33b_experiments.py  test_creative_writing.py  test_full_comparison.py  test_large_model.py  test_sigma_sweep.py
sanitycheck/: .gitignore  README.md  __init__.py  all_results.json  compute_agreement.py  compute_basic_metrics.py  config.py  embedding_noise_single.py  gemini_judge.py  generation_utils.py  groq_judge.py  groq_judge2.py  inference.py  inspect_outputs.py  make_annotations.py  prompts.py  regenerate_empty.py  run_experiment.py  sanitycheckplan.md  signature_utils.py  validate_setup.py
sanitycheck/outputs/: agreement_analysis.json  all_results.json
sanitycheck/outputs/run1/: RESULTS.md  groq_judgments.jsonl  groq_judgments_summary.json
sanitycheck/outputs/run2/: groq_binary_judgments.jsonl  groq_binary_summary.json
sanitycheck/outputs/run3/: groq_binary_judgments.jsonl  groq_binary_summary.json
sanitycheck/outputs/run4/: groq_binary_judgments.jsonl  groq_binary_summary.json
src/: __init__.py  embedding_noise.py  generation.py  humaneval_loader.py  metrics.py  model_loader.py  problem_generation.py  semantic_diversity.py  statistics.py
